Prepare for the java 11.